--- a/subkarya/Micromégas1752.html
+++ b/subkarya/Micromégas1752.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Micromegas</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -72,7 +72,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
     <p><strong> Kita orang bumi punya tinggi rata-rata hampir tidak lebih dari lima kaki—satu langkah. Jadi buminya Tn. Micromégas pastilah memiliki keliling 24.000 kali lebih besar daripada Bumi kecil kita. Di alam tidak ada yang lebih sederhana, lebih wajar. Domini raja-raja tertentu di Jerman atau Italia, yang dapat Anda kitari dalam setengah jam, dibandingkan dengan kekaisaran Turki, Rusia, atau China, hanya memberi gambaran samar akan lebarnya kesenjangan yang Alam tetapkan di antara beraneka jenis makhluk sejagat raya.</strong></p>
 
-    <p> <strong>Berdasarkan tinggi Yang Mulia Micromégas, pemahat atau pelukis manapun akan sependapat bahwa pinggangnya pasti sepadan, berkeliling sekitar 50.000 kaki. Dengan hidung sepertiga panjang wajah eloknya, dan wajah sepertujuh tinggi tubuh eloknya, maka hidung Sirius berpanjang kira-kira 5.714 kaki.</strong></p><img src="img/1.jpg" style="width:60%">
+    <p> <strong>Berdasarkan tinggi Yang Mulia Micromégas, pemahat atau pelukis manapun akan sependapat bahwa pinggangnya pasti sepadan, berkeliling sekitar 50.000 kaki. Dengan hidung sepertiga panjang wajah eloknya, dan wajah sepertujuh tinggi tubuh eloknya, maka hidung Sirius berpanjang kira-kira 5.714 kaki.</strong></p><img src="../img/1.jpg" style="width:60%">
 
     <p> <strong>Akalnya menandingi orang paling terdidik di antara kita; dia tahu banyak hal, sebagiannya adalah hasil temuan sendiri. Dia belum menginjak usia ke-250, dan sedang belajar di sekolah paling ternama di planetnya, sebagaimana lazim pada usianya, ketika memecahkan 50 dalil Euclid—18 lebih banyak daripada Blaise Pascal, yang, menurut keterangan saudarinya, usai memecahkan 32 dalil demi kesenangan pribadi, menjadi ahli geometri cukup bagus dan metafisikawan amat buruk. Saat berumur sekitar 450 tahun, dan sudah melewati masa kanak-kanak, Micromégas membedah banyak serangga kecil berdiameter kurang dari 100 kaki, dengan bantuan mikroskop canggih; dia menulis sebuah buku menarik tentang mereka, yang membawanya ke dalam masalah.</strong></p>
 
@@ -97,14 +97,14 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <img src="../img/4.jpg" style="width:70%">
         <img src="../img/5.jpg" style="width:90%">
       </div>
-    <!-- End photo grid -->
-    </div>
-  <!-- End Portfolio Section -->
-  </div>
-  <!--footer-->
-     <div class="footer">
+ <br></br>
+  <br></br>
+    <!--footer-->
+    <div class="footer">
 
-    <footer class="w3-container w3-dark-grey" style="padding:32px">
+    <footer class="w3-container w3-dark-grey w3-center" style="padding:32px">
+      <p> Beberapa karya Voltaire : </p>
+        <br></br>
   <a href="subkarya/L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
   
   <a href="subkarya/henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
@@ -112,10 +112,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
  
   <a href="subkarya/volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
     <a href="subkarya/zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
+        <br></br>
+      <br></br>
+    Created by Puji Rahmawati (XI.PSG)
 </footer>
 </div>
-  
-
 <!-- END PAGE CONTENT -->
 </div>
 
