--- a/subkarya/Micromégas1752.html
+++ b/subkarya/Micromégas1752.html
@@ -97,6 +97,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <img src="../img/4.jpg" style="width:70%">
         <img src="../img/5.jpg" style="width:90%">
       </div>
+    </div>
  <br></br>
   <br></br>
     <!--footer-->
