--- a/subkarya/L'ingenu.html
+++ b/subkarya/L'ingenu.html
@@ -68,7 +68,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   
     <h2 class="w3-text-light-grey">L'Ingénu 1767</h2>
     <hr style="width:200px" class="w3-opacity">
-    <img src="../2.jpg" style="width:30%"><p><strong>L'Ingénu (Prancis: [lɛ̃ʒeny]), diterjemahkan ke dalam bahasa Inggris di bawah berbagai judul termasuk The Huron, The Tulus Huron, Murid Alam dan Master Simple, adalah novel satir oleh penulis Prancis Voltaire, yang diterbitkan pada 1767. Ini menceritakan kisahnya dari Huron yang disebut "Anak Alam" yang, setelah menyeberangi Atlantik ke Inggris, menyeberang ke Brittany, Prancis pada 1690-an. Setelah tiba, pemberitahuan sebelumnya menggambarkan saudara laki-laki dan perempuan iparnya, yang mereka simpulkan sebagai orang tua Huron - menjadikannya orang Prancis.
+    <img src="../img/ingenu.jpg" style="width:30%"><p><strong>L'Ingénu (Prancis: [lɛ̃ʒeny]), diterjemahkan ke dalam bahasa Inggris di bawah berbagai judul termasuk The Huron, The Tulus Huron, Murid Alam dan Master Simple, adalah novel satir oleh penulis Prancis Voltaire, yang diterbitkan pada 1767. Ini menceritakan kisahnya dari Huron yang disebut "Anak Alam" yang, setelah menyeberangi Atlantik ke Inggris, menyeberang ke Brittany, Prancis pada 1690-an. Setelah tiba, pemberitahuan sebelumnya menggambarkan saudara laki-laki dan perempuan iparnya, yang mereka simpulkan sebagai orang tua Huron - menjadikannya orang Prancis.
 
 Tumbuh di luar budaya Eropa, ia melihat dunia dengan cara yang lebih 'alami', menyebabkannya menafsirkan sesuatu secara langsung, tidak menyadari apa yang biasa, yang mengarah pada salah tafsir komik. Setelah membaca Alkitab, ia merasa harus disunat dan memanggil ahli bedah untuk melakukan operasi (yang dihentikan melalui intervensi 'keluarga' -nya). Setelah pengakuannya yang pertama, ia mencoba untuk memaksa imam untuk mengaku juga - menafsirkan ayat Alkitab yang berarti pengakuan harus dilakukan secara timbal balik dan tidak membebaskan klerus. Tidak berharap untuk dibaptis di gereja, mereka menemukan Anak Alam menunggu di sungai, karena baptisan digambarkan dalam Alkitab. Kisah ini menyindir doktrin agama, korupsi pemerintah, dan kebodohan dan ketidakadilan masyarakat Prancis (termasuk praktik-praktiknya yang bertentangan dengan kitab suci yang sebenarnya).
 
@@ -81,18 +81,7 @@ Di seluruh L'Ingénu, Voltaire menganjurkan deisme, dan mencela intoleransi, fan
     
     
     <!-- Grid for photos -->
-    <div class="w3-row-padding" style="margin:0 -16px">
-      <div class="w3-half">
-         <img src="../img/6.jpg" style="width:100%">
-        <img src="../img/3.jpg" style="width:100%">
-      </div>
-
-      <div class="w3-half">
-        <img src="../img/4.jpg" style="width:70%">
-        <img src="../img/5.jpg" style="width:90%">
-      </div>
-    <!-- End photo grid -->
-    </div>
+  
   <!-- End Portfolio Section -->
   </div>
   <!--footer-->
