--- a/Homekarya.html
+++ b/Homekarya.html
@@ -239,7 +239,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p style="background-color:White;font-size:150%;font-color:Black;"><a href = "subkarya/L'ingenu.html"><strong> L'Ingénu 1767 </strong></a></p>
     <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-L'Ingénu, diterjemahkan ke dalam bahasa Inggris di bawah berbagai judul termasuk The Huron, The Tulus Huron, Murid Alam dan Master Simple, adalah novel satir oleh penulis Prancis Voltaire, diterbitkan pada 1767. <a href = "subkarya/L'ingenu.html"><strong>Read more...</strong></a></p><br>
  
-    <img src="img/Letters on the English.png" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:150px">
+    <a href= "subkarya/letterontheenglish.html"><img src="img/Letters on the English.png" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:150px"></a>
     <p style="background-color:White;font-size:150%;font-color:Black;"><strong>Letters on the English 1733  </strong></p>
     <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-Letters on the English adalah serangkaian esai yang ditulis oleh Voltaire berdasarkan pengalamannya tinggal di Inggris antara 1726 dan 1729.</p><br>
     
