--- a/subkarya/oedipus.html
+++ b/subkarya/oedipus.html
@@ -80,6 +80,20 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- End photo grid -->
     </div>
 
+ <!--footer-->
+      <div class="footer">
+
+    <footer class="w3-container w3-dark-grey" style="padding:32px">
+  <a href="subkarya/L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
+  
+  <a href="subkarya/henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
+  <a href="subkarya/Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
+ 
+  <a href="subkarya/volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
+    <a href="subkarya/zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
+</footer>
+</div>
+
 
 <!-- END PAGE CONTENT -->
 </div>
