--- a/subkarya/oedipus.html
+++ b/subkarya/oedipus.html
@@ -91,6 +91,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
  
   <a href="subkarya/volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
     <a href="subkarya/zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
+      <br> Created by Aida Nurul Shafa </br>
 </footer>
 </div>
 
