--- a/subkarya/Micromégas1752.html
+++ b/subkarya/Micromégas1752.html
@@ -113,6 +113,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
  
   <a href="subkarya/volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
     <a href="subkarya/zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
+      <a href="subkarya/letterontheenglish.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Letters on the English</a>
         <br></br>
       <br></br>
     Created by Puji Rahmawati (XI.PSG)
