--- a/subkarya/volt.html
+++ b/subkarya/volt.html
@@ -21,16 +21,16 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <img src="../img/voltaire.jpg" style="width:100%">
-  <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+   <img src="../img/voltaire.jpg" style="width:100%">
+  <a href="../index.html" class="w3-bar-item w3-button w3-padding-large  w3-hover-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
   </a>
-  <a href="about.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="../about.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-user w3-xxlarge"></i>
     <p>ABOUT</p>
   </a>
-  <a href="Homekarya.html" class="w3-bar-item w3-button w3-padding-large w3-black ">
+  <a href="../Homekarya.html" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-eye w3-xxlarge"></i>
     <p>KARYA</p>
   </a>
@@ -92,16 +92,16 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!--footer-->
       <div class="footer">
 
-    <footer class="w3-container w3-dark-grey" style="padding:32px">
-  <a href="subkarya/L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
   
-  <a href="subkarya/henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
-  <a href="subkarya/Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
+</footer><a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
+  
+  <a href="henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
+   <a href=/Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
  
-  <a href="subkarya/volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
-    <a href="subkarya/zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
-      <br> Created by Aida Nurul Shafa </br>
-</footer>
+    <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
+      <a href="letterontheenglish.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">letterontheenglish</a>  
+        <a href="oedipus.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">oedipus</a>
+        <a href="treatise-on-tolerance1763.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Treatise on Tolerance 1763</a>
 </div>
 
 
