--- a/about.html
+++ b/about.html
@@ -98,8 +98,13 @@
         <img src="img/kekasih-voltaire.jpg" style="width:100%"> <p>Kekasih voltaire (Madame du Chatelet)</p>
       </div>
               </div>
-   
-  
+<div class="footer">
+
+    <footer class="w3-container w3-dark-grey w3-center" style="padding:32px">
+  Created by:
+  <li>Syahriliandika Yuanindra (XI.PSG)</li>
+  <li>Azriel Baruna (XI.PSG)</li>
+</footer>  
   </div>
  
 </body>
