--- a/subkarya/Micromégas1752.html
+++ b/subkarya/Micromégas1752.html
@@ -106,14 +106,16 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <footer class="w3-container w3-dark-grey w3-center" style="padding:32px">
       <p> Beberapa karya Voltaire : </p>
         <br></br>
-  <a href="subkarya/L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
+  <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
   
-  <a href="subkarya/henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
-  <a href="subkarya/Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
+  <a href="henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
+  
  
-  <a href="subkarya/volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
-    <a href="subkarya/zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
-      <a href="subkarya/letterontheenglish.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Letters on the English</a>
+  <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
+    <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
+    <a href="letterontheenglish.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">letterontheenglish</a>  
+        <a href="oedipus.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">oedipus</a>
+        <a href="treatise-on-tolerance1763.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Treatise on Tolerance 1763</a>
         <br></br>
       <br></br>
     Created by Puji Rahmawati (XI.PSG)
