--- a/subkarya/L'ingenu.html
+++ b/subkarya/L'ingenu.html
@@ -98,11 +98,11 @@ Di seluruh L'Ingénu, Voltaire menganjurkan deisme, dan mencela intoleransi, fan
      <a href="letterontheenglish.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">letterontheenglish</a>  
         <a href="oedipus.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">oedipus</a>
         <a href="treatise-on-tolerance1763.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Treatise on Tolerance 1763</a>
-</footer>
+<br></br>
+      <br></br>
+    Created by Jeneva Yoshe A.R (XI.PSG)
 </footer>
 </div>
-  
-
 <!-- END PAGE CONTENT -->
 </div>
 
