--- a/subkarya/zadig.html
+++ b/subkarya/zadig.html
@@ -169,6 +169,9 @@ Teks itu juga memengaruhi kisah percintaan Islandia-saga, Fimmbræðra saga, yan
       <a href="letterontheenglish.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">letterontheenglish</a>  
         <a href="oedipus.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">oedipus</a>
         <a href="treatise-on-tolerance1763.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Treatise on Tolerance 1763</a>
+<br></br>
+      <br></br>
+    Created by Jeneva Yoshe A.R (XI.PSG)
 </footer>
 </div>
 <!-- END PAGE CONTENT -->
