--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 <!-- Page Content -->
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
-  <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
+  <header class="w3-container w3-padding-32 w3-center w3-white" id="home">
     <h1 class="w3-jumbo">Voltaire</h1>
     <p>Seorang penulis dan filsuf</p>
     <img src="img/Voltaire1.png" alt="voltaire" class="w3-image" width="992" height="1108">
