--- a/subkarya/henri.html
+++ b/subkarya/henri.html
@@ -92,7 +92,7 @@ ATAU Taylor edisi kritis dari La Henriade  mencurahkan volume penuh untuk pengan
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="../img/henri.jpg" style="width:100%">
+        <img src="../img/henri.JPG" style="width:100%">
         
     <!-- End photo grid -->
     </div>
@@ -112,7 +112,9 @@ ATAU Taylor edisi kritis dari La Henriade  mencurahkan volume penuh untuk pengan
      <a href="letterontheenglish.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">letterontheenglish</a>  
         <a href="oedipus.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">oedipus</a>
         <a href="treatise-on-tolerance1763.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Treatise on Tolerance 1763</a>
-</footer>
+<br></br>
+      <br></br>
+    Created by Jeneva Yoshe A.R (XI.PSG)
 </footer>
 </div>
 <!-- END PAGE CONTENT -->
