--- a/Homekarya.html
+++ b/Homekarya.html
@@ -82,9 +82,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p style="background-color:White;font-size:150%;font-color:Black;"><strong> <a href = "subkarya/zadig.html"> Zadig 1747 </a></strong></p>
     <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-Zadig ou la Destinée adalah novel dan karya fiksi filosofis oleh penulis Enlightenment Voltaire. Ini bercerita tentang Zadig, seorang filsuf di Babylonia kuno. <a href = "subkarya/zadig.html"><strong>Read more..</strong></a></p><br>
   
-    <img src="img/1763.png" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:150px">
-    <p style="background-color:White;font-size:150%;font-color:Black;"><strong> Treatise on Tolerance 1763 </strong></p>
-    <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-Risalah tentang Toleransi pada Kesempatan Kematian Jean Calas dari Penghakiman yang Diberikan di Toulouse adalah karya filsuf Prancis Voltaire, yang diterbitkan pada 1763, di mana ia menyerukan toleransi antara agama, dan menargetkan fanatisme agama, khususnya para Jesuit , mendakwa semua takhayul di sekitar agama.</p><br>
+    <a href = "subkarya/oedipus.html"><img src="/..img/oe.jpg" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:150px"></a>
+    <p style="background-color:White;font-size:150%;font-color:Black;"><a href = "subkarya/oedipus.html"><strong> Oedipus </strong></a></p>
+    <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-Oedipus adalah sebuah tragedi oleh dramawan dan filsuf Prancis Voltaire yang pertama kali dilakukan pada tahun 1718. Ini adalah drama pertamanya dan karya sastra pertama di mana ia menggunakan nama pena Voltaire. <a href = "subkarya/oedipus.html">Read more...</a></p><br>
     
     <img src="img/Dictionnairephilosophique.png" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:150px">
     <p style="background-color:White;font-size:150%;font-color:Black;"><strong>Dictionnaire Philosophique 1764  </strong></p>
