--- a/subkarya/henri.html
+++ b/subkarya/henri.html
@@ -60,7 +60,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">La</span> Henriade</h1>
     <p>1723</p>
-    <img src="../img/karya2.jpg" alt="boy" class="w3-image" width="992" height="1108">
+    <img src="../img/karya2.JPG" alt="boy" class="w3-image" width="992" height="1108">
   </header>
 
   <!-- About Section -->
