--- a/Homekarya.html
+++ b/Homekarya.html
@@ -82,7 +82,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p style="background-color:White;font-size:150%;font-color:Black;"><strong> <a href = "subkarya/zadig.html"> Zadig 1747 </a></strong></p>
     <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-Zadig ou la Destinée adalah novel dan karya fiksi filosofis oleh penulis Enlightenment Voltaire. Ini bercerita tentang Zadig, seorang filsuf di Babylonia kuno. <a href = "subkarya/zadig.html"><strong>Read more..</strong></a></p><br>
   
-    <a href = "subkarya/oedipus.html"><img src="/..img/oe.jpg" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:150px"></a>
+    <a href = "subkarya/oedipus.html"><img src="img/oe.jpg" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:150px"></a>
     <p style="background-color:White;font-size:150%;font-color:Black;"><a href = "subkarya/oedipus.html"><strong> Oedipus </strong></a></p>
     <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-Oedipus adalah sebuah tragedi oleh dramawan dan filsuf Prancis Voltaire yang pertama kali dilakukan pada tahun 1718. Ini adalah drama pertamanya dan karya sastra pertama di mana ia menggunakan nama pena Voltaire. <a href = "subkarya/oedipus.html">Read more...</a></p><br>
     
