--- a/subkarya/oedipus.html
+++ b/subkarya/oedipus.html
@@ -83,7 +83,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
  <!--footer-->
       <div class="footer">
 
-    <footer class="w3-container w3-dark-grey" style="padding:32px">
+    <footer class="w3-container w3-dark-grey w3-center" style="padding:32px">
+      Beberapa karya voltaire lainnya :
+      <br></br>
   <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
   
   <a href="henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
@@ -93,6 +95,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
     <a href="letterontheenglish.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">letterontheenglish</a>
 <a href="treatise-on-tolerance1763.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Treatise on Tolerance 1763</a>
+        <br></br>
+    Created by : Aida Nurul Shafa(XI.PSG)
 </footer>
 </div>
 
