--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   </div>
 
   <!-- Karya Section -->
-  <div>
+  <div class="w3-content w3-justify w3-text-grey w3-padding-64">
     <p>Banyak sekali buku karya penulis dari Prancis ini. Baik itu buku, puisi hingga drama. Buku ini berisi analisis tentang Voltaire dan karya-karyanya, khususnya tiga buah dongengnya yang terkenal (Candide, Zadig, dan Si Lugu). Secara spesifik, disertasi beliau membahas ironi dalam ketiga dongeng Voltaire tersebut. Sebenarnya Voltaire banyak pula menulis karya-karya lain, seperti puisi, drama, esai, sejarah, namun ia justru terkenal oleh dongeng-dongengnya yang semula dianggap sebagai karya sampingan penghibur hati, atau alat tersamar manakala ia tidak dapat mengkritik keadaan secara terbuka. Dongeng-dongeng Voltaire banyak dikenal orang karena sifatnya yang mengena atas kritikan sosial saat itu dan isinya yang tetap aktual sampai sekarang karena menyangkut masalah manusia yang universal.
     Seperti umumnya tulisan Husen yang sistematis dalam hal konteks, buku ini dibuka dengan pendahuluan mengenai keadaan Perancis abad ke-18, yaitu periode saat Voltaire hidup dan berkarya. Meninjau keadaan politik dan perubahan-perubahan di Eropa pada saat itu, serta perkembangan pemikiran di Perancis, kita seakan diajak mengunjungi milieu dan konteks sejarah saat Voltaire hidup. Dilanjutkan dengan ulasan mengenai riwayat hidup Voltaire, yang mengajak kita mengenal Voltaire secara lebih biografis.</p>
 
@@ -125,7 +125,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
   <!-- End Portfolio Section -->
   </div>
-
+  <!--footer-->
+      <div class="footer"><footer class="w3-container w3-dark-grey w3-center"  style="padding:32px">
+        <p>@Created by Az Zahra Putri R. (XI.PSG)</p>
+        </footer>
+  </div>
 
 <!-- END PAGE CONTENT -->
 </div>
