--- a/Homekarya.html
+++ b/Homekarya.html
@@ -84,11 +84,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   
     <a href = "subkarya/oedipus.html"><img src="img/oe.jpg" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:150px"></a>
     <p style="background-color:White;font-size:150%;font-color:Black;"><a href = "subkarya/oedipus.html"><strong> Oedipus </strong></a></p>
-    <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-Oedipus adalah sebuah tragedi oleh dramawan dan filsuf Prancis Voltaire yang pertama kali dilakukan pada tahun 1718. Ini adalah drama pertamanya dan karya sastra pertama di mana ia menggunakan nama pena Voltaire. <a href = "subkarya/oedipus.html">Read more...</a></p><br>
+    <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-Oedipus adalah sebuah tragedi oleh dramawan dan filsuf Prancis Voltaire yang pertama kali dilakukan pada tahun 1718. Ini adalah drama pertamanya dan karya sastra pertama di mana ia menggunakan nama pena Voltaire. <a href = "subkarya/oedipus.html"><strong>Read more...</stong></a></p><br>
     
     <a href = "subkarya/treatise-on-tolerance1763.html"><img src="img/1763.png" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:150px"></a>
     <p style="background-color:White;font-size:150%;font-color:Black;"><a href = "subkarya/treatise-on-tolerance1763.html"><strong> Treatise on Tolerance 1763 </strong></a></p>
-    <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-Risalah tentang Toleransi pada Kesempatan Kematian Jean Calas dari Penghakiman yang Diberikan di Toulouse adalah karya filsuf Prancis Voltaire, yang diterbitkan pada 1763, di mana ia menyerukan toleransi antara agama, dan menargetkan fanatisme agama, khususnya para Jesuit , mendakwa semua takhayul di sekitar agama.<a href = "subkarya/treatise-on-tolerance1763.html">Read more..</a></p><br>
+    <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-Risalah tentang Toleransi pada Kesempatan Kematian Jean Calas dari Penghakiman yang Diberikan di Toulouse adalah karya filsuf Prancis Voltaire, yang diterbitkan pada 1763, di mana ia menyerukan toleransi antara agama, dan menargetkan fanatisme agama, khususnya para Jesuit , mendakwa semua takhayul di sekitar agama.<a href = "subkarya/treatise-on-tolerance1763.html"><strong>Read more..</strong></a></p><br>
     
     <a href = "subkarya/Micromégas1752.html"><img src="img/Micromégas.png" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:150px"></a>
     <p style="background-color:White;font-size:150%;font-color:Black;"><strong> <a href = "subkarya/Micromégas1752.html">Micromégas 1752 </a></strong></p>
@@ -122,11 +122,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <a href="subkarya/Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
  
   <a href="subkarya/volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
-    <a href="subkarya/zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
-     <a href="subkarya/letterontheenglish.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Letter on the english</a>  
-        <a href="subkarya/oedipus.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">oedipus</a>
-        <a href="subkarya/treatise-on-tolerance1763.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Treatise on Tolerance 1763</a>
-
+  <a href="subkarya/zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
+  <a href="subkarya/letterontheenglish.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Letter on the english</a>  
+  <a href="subkarya/oedipus.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Oedipus</a>
+  <a href="subkarya/treatise-on-tolerance1763.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Treatise on Tolerance 1763</a>
+  <a href="subkarya/L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
         <br></br>
       <br></br>
     Created by Puji Rahmawati (XI.PSG)
