--- a/Homekarya.html
+++ b/Homekarya.html
@@ -88,7 +88,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     
     <a href = "subkarya/treatise-on-tolerance1763.html"><img src="img/1763.png" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:150px"></a>
     <p style="background-color:White;font-size:150%;font-color:Black;"><a href = "subkarya/treatise-on-tolerance1763.html"><strong> Treatise on Tolerance 1763 </strong></a></p>
-    <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-Risalah tentang Toleransi pada Kesempatan Kematian Jean Calas dari Penghakiman yang Diberikan di Toulouse adalah karya filsuf Prancis Voltaire, yang diterbitkan pada 1763, di mana ia menyerukan toleransi antara agama, dan menargetkan fanatisme agama, khususnya para Jesuit , mendakwa semua takhayul di sekitar agama.<a href = "subkarya/treatise-on-tolerance1763.html"><strong>Read more..</strong></a></p><br>
+    <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-Risalah tentang Toleransi pada Kesempatan Kematian Jean Calas dari Penghakiman yang Diberikan di Toulouse adalah karya filsuf Prancis Voltaire, yang diterbitkan pada 1763, di mana ia menyerukan toleransi antara agama, dan menargetkan fanatisme agama, khususnya para Jesuit , mendakwa semua takhayul di sekitar agama.<a href = "subkarya/treatise-on-tolerance1763.html"><strong>Read more...</strong></a></p><br>
     
     <a href = "subkarya/Micromégas1752.html"><img src="img/Micromégas.png" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:150px"></a>
     <p style="background-color:White;font-size:150%;font-color:Black;"><strong> <a href = "subkarya/Micromégas1752.html">Micromégas 1752 </a></strong></p>
