--- a/Homekarya.html
+++ b/Homekarya.html
@@ -76,15 +76,15 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h3 class="w3-padding-24 w3-text-light-grey">Some Of Creation From Voltaire</h3>  
     <a href = "subkarya/volt.html"><img src="img/Candide.png" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:150px"></a>
     <p style="background-color:White;font-size:150%;font-color:Black;"><a href = "subkarya/volt.html"><strong> Candide 1759 </strong></a></p>
-    <p style="font-size:100%;font-color:white;">Candide adalah sebuah novel satir yang ditulis oleh filsuf Voltaire. Novel ini diterbitkan pertama kali pada 1759 di Jenewa, Swiss. <a href = "subkarya/volt.html"><strong>Read more...</strong></a></p><br>
+    <p style="font-size:100%;font-color:white;"><strong>Candide adalah sebuah novel satir yang ditulis oleh filsuf Voltaire. Novel ini diterbitkan pertama kali pada 1759 di Jenewa, Swiss. <a href = "subkarya/volt.html">Read more...</strong></a></p><br>
     
     <a href = "subkarya/zadig.html"><img src="img/Zadig1747.png" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:150px"> </a>
     <p style="background-color:White;font-size:150%;font-color:Black;"><strong> <a href = "subkarya/zadig.html"> Zadig 1747 </a></strong></p>
-    <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-Zadig ou la Destinée adalah novel dan karya fiksi filosofis oleh penulis Enlightenment Voltaire. Ini bercerita tentang Zadig, seorang filsuf di Babylonia kuno. <a href = "subkarya/zadig.html"><strong>Read more..</strong></a></p><br>
+    <p style="font-size:100%;font-color:white;"><strong>Diterjemahkan dari bahasa Inggris-Zadig ou la Destinée adalah novel dan karya fiksi filosofis oleh penulis Enlightenment Voltaire. Ini bercerita tentang Zadig, seorang filsuf di Babylonia kuno. <a href = "subkarya/zadig.html">Read more..</strong></a></p><br>
   
     <a href = "subkarya/oedipus.html"><img src="img/oe.jpg" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:150px"></a>
     <p style="background-color:White;font-size:150%;font-color:Black;"><a href = "subkarya/oedipus.html"><strong> Oedipus </strong></a></p>
-    <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-Oedipus adalah sebuah tragedi oleh dramawan dan filsuf Prancis Voltaire yang pertama kali dilakukan pada tahun 1718. Ini adalah drama pertamanya dan karya sastra pertama di mana ia menggunakan nama pena Voltaire. <a href = "subkarya/oedipus.html"><strong>Read more...</stong></a></p><br>
+    <p style="font-size:100%;font-color:white;"><strong>Diterjemahkan dari bahasa Inggris-Oedipus adalah sebuah tragedi oleh dramawan dan filsuf Prancis Voltaire yang pertama kali dilakukan pada tahun 1718. Ini adalah drama pertamanya dan karya sastra pertama di mana ia menggunakan nama pena Voltaire. <a href = "subkarya/oedipus.html">Read more...</stong></a></p><br>
     
     <a href = "subkarya/treatise-on-tolerance1763.html"><img src="img/1763.png" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:150px"></a>
     <p style="background-color:White;font-size:150%;font-color:Black;"><a href = "subkarya/treatise-on-tolerance1763.html"><strong> Treatise on Tolerance 1763 </strong></a></p>
