--- a/subkarya/volt.html
+++ b/subkarya/volt.html
@@ -102,7 +102,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
     <a href="letterontheenglish.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Letter on the english</a>
 <a href="treatise-on-tolerance1763.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Treatise on Tolerance 1763</a>
-        <a href="subkarya/oedipus.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Oedipus</a>
+        <a href="oedipus.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Oedipus</a>
         <br></br>
     Created by : Aida Nurul Shafa(XI.PSG)
 </footer>
