--- a/subkarya/oedipus.html
+++ b/subkarya/oedipus.html
@@ -74,11 +74,12 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="../img/oedipus.jpg" style="width:100%">
+        <img src="../img/oedipus.jpg" style="width:70%">
       </div>
     <!-- End photo grid -->
     </div>
-
+    <br></br>
+  <br></br>
  <!--footer-->
       <div class="footer">
 
@@ -92,7 +93,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
  
   <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
     <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
-    <a href="letterontheenglish.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">letterontheenglish</a>
+    <a href="letterontheenglish.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Letter on the english</a>
 <a href="treatise-on-tolerance1763.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Treatise on Tolerance 1763</a>
         <br></br>
     Created by : Aida Nurul Shafa(XI.PSG)
