--- a/subkarya/treatise-on-tolerance1763.html
+++ b/subkarya/treatise-on-tolerance1763.html
@@ -78,7 +78,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
     <p><strong>Ketika, di zaman kebiadaban kita, hampir tidak ada dua raja feodal yang dimiliki di antara mereka satu Perjanjian Baru, mungkin dimaafkan untuk menawarkan dongeng kepada vulgar, yaitu, kepada para penguasa feodal ini, kepada istri-istri mereka yang dungu, dan kepada para budak mereka yang kejam; mereka dituntun untuk percaya bahwa Santo Christopher menggendong bayi Yesus dari satu sisi sungai ke sisi lain; mereka diberi makan cerita tentang tukang sihir dan harta benda spiritual mereka; mereka dengan mudah membayangkan bahwa Saint Genou akan menyembuhkan encok, dan bahwa Saint Claire akan menyembuhkan masalah mata. Anak-anak percaya pada manusia serigala, dan para ayah di ikat pinggang Saint Francis. Jumlah peninggalan itu tak terhitung.</strong></p>
 
-    <p><strong> Sedimen takhayul ini masih bertahan di antara orang-orang, bahkan pada waktu itu agama dimurnikan. Kita tahu bahwa ketika Monsieur de Noailles, Uskup Chlon, memindahkan dan melemparkan ke dalam api peninggalan palsu pusar suci Yesus Kristus, maka seluruh desa Chlon mulai melakukan tindakan melawannya; namun, dia memiliki keberanian yang sama besarnya dengan kesalehannya, dan dia berhasil membuat orang-orang Champeno percaya bahwa mereka dapat memuja Yesus Kristus dalam roh dan kebenaran, tanpa pusar di gereja.</strong></p><img src="../img/toleransi.jpg" style="width:60%">
+    <p><strong> Sedimen takhayul ini masih bertahan di antara orang-orang, bahkan pada waktu itu agama dimurnikan. Kita tahu bahwa ketika Monsieur de Noailles, Uskup Chlon, memindahkan dan melemparkan ke dalam api peninggalan palsu pusar suci Yesus Kristus, maka seluruh desa Chlon mulai melakukan tindakan melawannya; namun, dia memiliki keberanian yang sama besarnya dengan kesalehannya, dan dia berhasil membuat orang-orang Champeno percaya bahwa mereka dapat memuja Yesus Kristus dalam roh dan kebenaran, tanpa pusar di gereja.</strong></p><img src="../img/toleransi.jpg" style="width:40%">
 
     <p> <strong>selang yang kita sebut kaum Jansen berkontribusi besar dalam memusnahkan secara bertahap dari semangat bangsa, sebagian besar dari gagasan-gagasan palsu yang memalukan agama Kristen. Orang-orang berhenti percaya bahwa itu sudah cukup untuk melafalkan doa kepada Perawan Maria selama tiga puluh hari sehingga mereka dapat melakukan apa yang mereka inginkan dan berdosa dengan bebas dari hukuman yang mereka sisa tahun ini.</strong></p>
 
@@ -136,8 +136,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
  
   <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
     <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
-    <a href="letterontheenglish.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">letterontheenglish</a>  
-        <a href="oedipus.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">oedipus</a>
+    <a href="letterontheenglish.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Letter on the english</a>  
+        <a href="oedipus.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Oedipus</a>
+      <a href="Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
         <a href="treatise-on-tolerance1763.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Treatise on Tolerance 1763</a>
         <br></br>
       <br></br>
