--- a/subkarya/henri.html
+++ b/subkarya/henri.html
@@ -60,7 +60,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-white" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">La</span> Henriade</h1>
     <p>1723</p>
-    <img src="../img/karya2.JPG" alt="boy" class="w3-image" width="992" height="1108">
+    <img src="../img/karya2.JPG" alt="boy" class="w3-image" width="300" height="600">
   </header>
 
   <!-- About Section -->
@@ -100,19 +100,17 @@ ATAU Taylor edisi kritis dari La Henriade  mencurahkan volume penuh untuk pengan
   </div>
   <!--footer-->
     <div class="footer">
-
-    <footer class="w3-container w3-dark-grey" style="padding:32px">
-  <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
-  
- 
-  <a href="Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
- 
-  <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
-    <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
-     <a href="letterontheenglish.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">letterontheenglish</a>  
-        <a href="oedipus.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">oedipus</a>
-        <a href="treatise-on-tolerance1763.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Treatise on Tolerance 1763</a>
-<br></br>
+ <footer class="w3-container w3-dark-grey w3-center" style="padding:32px">
+	      Beberapa karya voltaire lainnya :
+	      <br></br>
+	      <a href="subkarya/L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
+	  <a href="subkarya/zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
+	  <a href="Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
+	    <a href="subkarya/volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
+	    <a href="letterontheenglish.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Letter on the english</a>
+	<a href="treatise-on-tolerance1763.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Treatise on Tolerance 1763</a>
+	        <a href="subkarya/oedipus.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Oedipus</a>
+    <br></br>
       <br></br>
     Created by Jeneva Yoshe A.R (XI.PSG)
 </footer>
