--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   </div>
   <!--footer-->
       <div class="footer"><footer class="w3-container w3-dark-grey w3-center"  style="padding:32px">
-        <p>@Created by Az Zahra Putri R. (XI.PSG)</p>
+        <p>Created by Az Zahra Putri R. (XI.PSG)</p>
         </footer>
   </div>
 
