--- a/subkarya/letterontheenglish.html
+++ b/subkarya/letterontheenglish.html
@@ -160,12 +160,10 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
         <a href="oedipus.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">oedipus</a>
         <a href="treatise-on-tolerance1763.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Treatise on Tolerance 1763</a>
-</footer>
-        <br></br>
       <br></br>
-    Created by Syahriliandika Yuanindra (XI.PSG)
-</footer>
-</div>
+  <br></br>
+  <p>Created by Syahriliandika Yuanindra (XI.PSG)</p>
+  </footer>
 <!-- END PAGE CONTENT -->
 </div>
 
