--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
   <header class="w3-container w3-padding-32 w3-center w3-white" id="home">
     <h1 class="w3-jumbo">Voltaire</h1>
     <p>Seorang penulis dan filsuf</p>
-    <img src="img/Voltaire1.png" alt="voltaire" class="w3-image" width="992" height="1108">
+    <img src="img/voltaire1.png" alt="voltaire" class="w3-image" width="992" height="1108">
   </header>
   <!-- About Section -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
