--- a/subkarya/henri.html
+++ b/subkarya/henri.html
@@ -104,13 +104,13 @@ ATAU Taylor edisi kritis dari La Henriade  mencurahkan volume penuh untuk pengan
  <footer class="w3-container w3-dark-grey w3-center" style="padding:32px">
 	      Beberapa karya voltaire lainnya :
 	      <br></br>
-	      <a href="subkarya/L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
-	  <a href="subkarya/zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
+	      <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
+	  <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
 	  <a href="Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
-	    <a href="subkarya/volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
+	    <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
 	    <a href="letterontheenglish.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Letter on the english</a>
 	<a href="treatise-on-tolerance1763.html"class="w3-button w3-black w3-padding-large w3-margin-bottom">Treatise on Tolerance 1763</a>
-	        <a href="subkarya/oedipus.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Oedipus</a>
+	        <a href="oedipus.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Oedipus</a>
     <br></br>
       <br></br>
     Created by Jeneva Yoshe A.R (XI.PSG)
